# spaghetti

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  TODO.md
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/core-ir/: Cargo.toml
crates/core-ir/examples/: gen_graph_json.rs
crates/core-ir/src/: lib.rs  tests.rs  types.rs
crates/core-ir/tests/: core_ir_tests.rs
crates/core-ir/tests/fixtures/: serde_golden.json  symbol_id_golden.json
crates/frontend-clang/: Cargo.toml
crates/frontend-clang/src/: cache.rs  lib.rs
crates/frontend-clang/tests/: clang_tests.rs
crates/layout/: Cargo.toml
crates/layout/src/: lib.rs
crates/layout/src/forces/: container_repulsion.rs  containment.rs  gravity.rs  grid.rs  location_affinity.rs  mod.rs  repulsion.rs  spring_attraction.rs
crates/layout/tests/: layout_tests.rs
crates/layout/tests/fixtures/: disconnected.json  layout_golden.json
crates/query/: Cargo.toml
crates/query/src/: lib.rs
crates/query/tests/: query_tests.rs
crates/viz/: Cargo.toml
crates/viz/src/: app.rs  camera.rs  file_tree.rs  fps.rs  log_capture.rs  main.rs  progress.rs  settings.rs  widgets.rs
crates/viz/src/panels/: canvas.rs  console.rs  left.rs  mod.rs  right.rs
crates/viz/src/state/: console_state.rs  filter_state.rs  graph_state.rs  indexing.rs  interaction.rs  mod.rs  render_state.rs  simulation.rs
docs/: Architecture.md
examples/tiny-cpp/: compile_commands.json  graph.json
examples/tiny-cpp/include/: circle.h  shape.h  square.h
examples/tiny-cpp/src/: circle.cpp  main.cpp  shape.cpp  square.cpp
scripts/: setup-libclang.sh
