[package]
name = "frontend-clang"
version = "0.1.0"
edition = "2021"

[features]
clang-tests = []

[dependencies]
core-ir = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
seahash = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
clang = "2"
