[package]
name = "layout"
version = "0.1.0"
edition = "2021"

[dependencies]
core-ir = { workspace = true }
glam = { workspace = true }
indexmap = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
