[package]
name = "viz"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spaghetti"
path = "src/main.rs"

[dependencies]
core-ir = { workspace = true }
layout = { workspace = true }
query = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
glam = { workspace = true }
