[package]
name = "viz"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "spaghetti"
path = "src/main.rs"

[features]
clang = ["dep:frontend-clang"]

[dependencies]
core-ir = { workspace = true }
frontend-clang = { workspace = true, optional = true }
layout = { workspace = true }
query = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
glam = { workspace = true }
